<resources>
    <string name="app_name">Inventory App Stage 2</string>
    <string name="prodName">Name of the  product</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supp">Supplier</string>
    <string name="supPhone">Supplier phone</string>
    <string name="save">Save</string>
    <string name="addProd">Add new product</string>
    <string name="delData">Delete all data</string>
    <string name="editAct">Edit product</string>
    <string name="addAct">Add new product</string>
    <string name="editDel">Delete product</string>
    <string name="editor_insert_failed">Cannot save this product</string>
    <string name="editor_insert_successful">Saved ^_^</string>
    <string name="editor_update_failed">Cannot update this product</string>
    <string name="editor_update_successful">Updated^_^</string>
    <string name="editor_delete_failed">Unable to delete Your product</string>
    <string name="editor_delete_successful">Product deleted as desired</string>
    <string name="delete_dialog_msg">You are about to delete product</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">You have unsaved changes</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="labelName">Name of product: </string>
    <string name="labelPrice">Price of product: </string>
    <string name="labelQuantity">Quantity of product: </string>
    <string name="labelPhone">Supplier phone:</string>
    <string name="sellButton">Sell product</string>
    <string name="alertTitle">You selected product</string>
    <string name="alertText">"Now you can go back to list, edit Your item or view details" </string>
    <string name="alertExit">Exit </string>
    <string name="alertEdit">Edit product</string>
    <string name="alertDetail">View details</string>
    <string name="productLabel">Name of your product:</string>
    <string name="priceLabel">Price of your product is:</string>
    <string name="quantityLabel">Quantity of product</string>
    <string name="supplierLabel">View details</string>
    <string name="buttonAdd">Add item</string>
    <string name="buttonSell">Sell item</string>
    <string name="emptyList">Empty list</string>
    <string name="emptyPopulate">populate it ...</string>
    <string name="buttonCall">Call supplier</string>
    <string name="failedSell">You have 0 items. Call supplier</string>
    <string name="call_fail">Wrong number o_O</string>
    <string name="edit_fail_text">Please fill all fields</string>
</resources>
