<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding10"
            android:paddingTop="@dimen/padding16">

            <TextView
                android:id="@+id/displayNameLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/productLabel"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/displayName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding10"
            android:paddingTop="@dimen/padding35">

            <TextView
                android:id="@+id/displayPriceLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/priceLabel"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/displayPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding35">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding10">

                <TextView
                    android:id="@+id/displayQuantityLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/quantityLabel"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/displayQuantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/padding10"
                    android:text="@string/buttonAdd" />

                <Button
                    android:id="@+id/buttonSell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/padding10"
                    android:text="@string/buttonSell" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding10"
                android:paddingTop="@dimen/padding35">

                <TextView
                    android:id="@+id/displaySupplierLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="Your supplier is:"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/displaySupplier"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding10"
                android:paddingTop="@dimen/padding35">

                <TextView
                    android:id="@+id/displayPhonerLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/supPhone"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/displayPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>

            <Button
                android:id="@+id/callSupplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding10"
                android:text="@string/buttonCall" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>